--- a/app/docker/views/images/edit/image.html
+++ b/app/docker/views/images/edit/image.html
@@ -1,4 +1,4 @@
-<page-header title="'Image details'" breadcrumbs="[{label:'Images', link:'docker.images'}, image.Id]"> </page-header>
+<page-header title="'Image details'" breadcrumbs="[{label:'Images', link:'docker.images'}, '' + (image.Id)]"> </page-header>
 
 <div class="row" ng-if="image.RepoTags.length > 0">
   <div class="col-lg-12 col-md-12 col-xs-12">
