feat(ui): EE-3560 portainer/registries/create update alert icons

--- a/app/portainer/components/forms/registry-form-aws-ecr/registry-form-ecr.html
+++ b/app/portainer/components/forms/registry-form-aws-ecr/registry-form-ecr.html
@@ -19,8 +19,14 @@
   <div class="form-group" ng-show="$ctrl.registryFormEcr.registry_name.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormEcr.registry_name.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
-        <p ng-message="used"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> A registry with the same name already exists.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
+        <p ng-message="used" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          A registry with the same name already exists.
+        </p>
       </div>
     </div>
   </div>
@@ -47,7 +53,10 @@
   <div class="form-group" ng-show="$ctrl.registryFormEcr.registry_url.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormEcr.registry_url.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -76,7 +85,10 @@
     <div class="form-group" ng-show="$ctrl.registryFormEcr.registry_access_key.$invalid">
       <div class="col-sm-12 small text-warning">
         <div ng-messages="$ctrl.registryFormEcr.registry_access_key.$error">
-          <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+          <p ng-message="required" class="vertical-center">
+            <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+            This field is required.
+          </p>
         </div>
       </div>
     </div>
@@ -92,7 +104,10 @@
     <div class="form-group" ng-show="$ctrl.registryFormEcr.registry_secret_access_key.$invalid">
       <div class="col-sm-12 small text-warning">
         <div ng-messages="$ctrl.registryFormEcr.registry_secret_access_key.$error">
-          <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+          <p ng-message="required" class="vertical-center">
+            <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+            This field is required.
+          </p>
         </div>
       </div>
     </div>
@@ -109,8 +124,14 @@
   <div class="form-group" ng-show="$ctrl.registryFormEcr.registry_region.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormEcr.registry_region.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
-        <p ng-message="used"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> A registry with the same name already exists.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
+        <p ng-message="used" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          A registry with the same name already exists.
+        </p>
       </div>
     </div>
   </div>
