--- a/app/portainer/components/forms/registry-form-azure/registry-form-azure.html
+++ b/app/portainer/components/forms/registry-form-azure/registry-form-azure.html
@@ -10,8 +10,14 @@
   <div class="form-group" ng-show="$ctrl.registryFormAzure.registry_name.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormAzure.registry_name.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
-        <p ng-message="used"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> A registry with the same name already exists.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
+        <p ng-message="used" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          A registry with the same name already exists.
+        </p>
       </div>
     </div>
   </div>
@@ -29,7 +35,10 @@
   <div class="form-group" ng-show="$ctrl.registryFormAzure.registry_url.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormAzure.registry_url.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -44,7 +53,10 @@
   <div class="form-group" ng-show="$ctrl.registryFormAzure.registry_username.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormAzure.registry_username.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -59,7 +71,10 @@
   <div class="form-group" ng-show="$ctrl.registryFormAzure.registry_password.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormAzure.registry_password.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
