--- a/app/portainer/components/forms/registry-form-custom/registry-form-custom.html
+++ b/app/portainer/components/forms/registry-form-custom/registry-form-custom.html
@@ -17,8 +17,14 @@
   <div class="form-group" ng-show="$ctrl.registryFormCustom.registry_name.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormCustom.registry_name.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
-        <p ng-message="used"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> A registry with the same name already exists.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
+        <p ng-message="used" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          A registry with the same name already exists.
+        </p>
       </div>
     </div>
   </div>
@@ -36,7 +42,10 @@
   <div class="form-group" ng-show="$ctrl.registryFormCustom.registry_url.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="$ctrl.registryFormCustom.registry_url.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -63,7 +72,10 @@
     <div class="form-group" ng-show="$ctrl.registryFormCustom.registry_username.$invalid">
       <div class="col-sm-12 small text-warning">
         <div ng-messages="$ctrl.registryFormCustom.registry_username.$error">
-          <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+          <p ng-message="required" class="vertical-center">
+            <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+            This field is required.
+          </p>
         </div>
       </div>
     </div>
@@ -78,7 +90,10 @@
     <div class="form-group" ng-show="$ctrl.registryFormCustom.registry_password.$invalid">
       <div class="col-sm-12 small text-warning">
         <div ng-messages="$ctrl.registryFormCustom.registry_password.$error">
-          <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+          <p ng-message="required" class="vertical-center">
+            <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+            This field is required.
+          </p>
         </div>
       </div>
     </div>
