--- a/app/portainer/components/forms/registry-form-gitlab/registry-form-gitlab.html
+++ b/app/portainer/components/forms/registry-form-gitlab/registry-form-gitlab.html
@@ -19,7 +19,10 @@
   <div class="form-group" ng-show="registryFormGitlab.registry_username.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="registryFormGitlab.registry_username.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -34,7 +37,10 @@
   <div class="form-group" ng-show="registryFormGitlab.registry_perso_acc_token.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="registryFormGitlab.registry_perso_acc_token.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -64,7 +70,10 @@
   <div class="form-group" ng-show="registryFormGitlab.instance_url.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="registryFormGitlab.instance_url.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
@@ -82,7 +91,10 @@
   <div class="form-group" ng-show="registryFormGitlab.registry_url.$invalid">
     <div class="col-sm-12 small text-warning">
       <div ng-messages="registryFormGitlab.registry_url.$error">
-        <p ng-message="required"><i class="fa fa-exclamation-triangle" aria-hidden="true"></i> This field is required.</p>
+        <p ng-message="required" class="vertical-center">
+          <pr-icon icon="'alert-triangle'" feather="true"></pr-icon>
+          This field is required.
+        </p>
       </div>
     </div>
   </div>
