--- a/app/portainer/components/forms/registry-form-gitlab/registry-form-gitlab.html
+++ b/app/portainer/components/forms/registry-form-gitlab/registry-form-gitlab.html
@@ -115,8 +115,8 @@
   <div class="col-sm-12 form-section-title"> Gitlab projects </div>
   <div class="form-group">
     <span class="col-sm-12 text-muted small"> Select the project's registries you want to manage. Portainer will create one registry for each selected project. </span>
-    <span class="col-sm-12 text-muted small">
-      <i class="fa fa-exclamation-circle orange-icon" aria-hidden="true" style="margin-right: 2px"></i>
+    <span class="col-sm-12 text-muted small vertical-center">
+      <pr-icon icon="'alert-triangle'" feather="true" class-name="'icon-warning'"></pr-icon>
       If you can't select a project, make sure that registry feature is activated on it.
     </span>
   </div>
@@ -124,7 +124,7 @@
     <div class="col-sm-12">
       <gitlab-projects-datatable
         title-text="Gitlab projects"
-        title-icon="fa-project-diagram"
+        title-icon="list"
         dataset="$ctrl.projects"
         table-key="gitlab_projects"
         state="$ctrl.state.gitlab"
