--- a/app/portainer/components/datatables/access-tokens-datatable/access-tokens-datatable.html
+++ b/app/portainer/components/datatables/access-tokens-datatable/access-tokens-datatable.html
@@ -39,36 +39,46 @@
           <thead>
             <tr>
               <th>
-                <span class="md-checkbox">
-                  <input id="select_all" type="checkbox" ng-model="$ctrl.state.selectAll" ng-change="$ctrl.selectAll()" />
-                  <label for="select_all"></label>
-                </span>
-                <a ng-click="$ctrl.changeOrderBy('description')">
-                  Description
-                  <i class="fa fa-sort-alpha-down" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'description' && !$ctrl.state.reverseOrder"></i>
-                  <i class="fa fa-sort-alpha-up" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'description' && $ctrl.state.reverseOrder"></i>
-                </a>
+                <div class="vertical-center">
+                  <span class="md-checkbox">
+                    <input id="select_all" type="checkbox" ng-model="$ctrl.state.selectAll" ng-change="$ctrl.selectAll()" />
+                    <label for="select_all"></label>
+                  </span>
+                  <table-column-header
+                    col-title="'description'"
+                    can-sort="true"
+                    is-sorted="$ctrl.state.orderBy === 'description'"
+                    is-sorted-desc="$ctrl.state.orderBy === 'description' && $ctrl.state.reverseOrder"
+                    ng-click="$ctrl.changeOrderBy('description')"
+                  ></table-column-header>
+                </div>
               </th>
               <th>
-                <a ng-click="$ctrl.changeOrderBy('prefix')">
-                  Prefix
-                  <i class="fa fa-sort-alpha-down" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'prefix' && !$ctrl.state.reverseOrder"></i>
-                  <i class="fa fa-sort-alpha-up" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'prefix' && $ctrl.state.reverseOrder"></i>
-                </a>
+                <table-column-header
+                  col-title="'prefix'"
+                  can-sort="true"
+                  is-sorted="$ctrl.state.orderBy === 'prefix'"
+                  is-sorted-desc="$ctrl.state.orderBy === 'prefix' && $ctrl.state.reverseOrder"
+                  ng-click="$ctrl.changeOrderBy('prefix')"
+                ></table-column-header>
               </th>
               <th>
-                <a ng-click="$ctrl.changeOrderBy('dateCreated')">
-                  Created
-                  <i class="fa fa-sort-alpha-down" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'dateCreated' && !$ctrl.state.reverseOrder"></i>
-                  <i class="fa fa-sort-alpha-up" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'dateCreated' && $ctrl.state.reverseOrder"></i>
-                </a>
+                <table-column-header
+                  col-title="'dateCreated'"
+                  can-sort="true"
+                  is-sorted="$ctrl.state.orderBy === 'dateCreated'"
+                  is-sorted-desc="$ctrl.state.orderBy === 'dateCreated' && $ctrl.state.reverseOrder"
+                  ng-click="$ctrl.changeOrderBy('dateCreated')"
+                ></table-column-header>
               </th>
               <th>
-                <a ng-click="$ctrl.changeOrderBy('lastUsed')">
-                  Last Used
-                  <i class="fa fa-sort-alpha-down" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'lastUsed' && !$ctrl.state.reverseOrder"></i>
-                  <i class="fa fa-sort-alpha-up" aria-hidden="true" ng-if="$ctrl.state.orderBy === 'lastUsed' && $ctrl.state.reverseOrder"></i>
-                </a>
+                <table-column-header
+                  col-title="'lastUsed'"
+                  can-sort="true"
+                  is-sorted="$ctrl.state.orderBy === 'lastUsed'"
+                  is-sorted-desc="$ctrl.state.orderBy === 'lastUsed' && $ctrl.state.reverseOrder"
+                  ng-click="$ctrl.changeOrderBy('lastUsed')"
+                ></table-column-header>
               </th>
             </tr>
           </thead>
