--- a/app/portainer/components/theme/theme-settings.html
+++ b/app/portainer/components/theme/theme-settings.html
@@ -1,6 +1,6 @@
 <div class="mt-6">
   <rd-widget>
-    <rd-widget-header icon="sliders" feather-icon="true" title-text="Change user theme"></rd-widget-header>
+    <rd-widget-header icon="sliders" feather-icon="true" title-text="User theme"></rd-widget-header>
     <rd-widget-body>
       <form class="theme-panel">
         <!-- Theme Selector-->
