--- a/app/portainer/views/auth/auth.html
+++ b/app/portainer/views/auth/auth.html
@@ -10,7 +10,7 @@
       <!-- !login box logo -->
 
       <div class="row text-center p-5">
-        <p class="text-xl">Log in your account</p>
+        <p class="text-xl">Log in to your account</p>
         <p class="text-md text-muted fw-bold">Welcome back! Please enter your details</p>
       </div>
 
